<resources>
    <string name="app_name">Music</string>
    <string name="artist">Nghệ sĩ</string>
    <string name="album">Album</string>
    <string name="list_play">Danh sách phát</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addList">Tạo danh sách nhạc mới</string>
    <string name="unknown_album">Album Unknown</string>
    <string name="unknown_artist">Artist Unknown</string>
    <string name="song"> Bài hát</string>
    <string name="play_all">Chơi tất cả bài hát</string>
    <string name="addtolist">Thêm vào playlist</string>
    <string name="setted_to_ring">Đặt làm nhạc chuông thành công !</string>
    <string name="set_to_ring">Đặt làm nhạc chuông</string>
    <string name="remove">Xóa</string>
    <string name="reName">Đổi tên</string>
    <string name="now_play_ing">Now Playing</string>
    <string name="songAdded">Thêm vào danh sách thành công !</string>
    <string name="addToList">Thêm vào danh sách</string>
    <string name="error">Xảy ra lỗi khi đặt làm nhạc chuông !</string>
    <string name="error_delete">Xảy ra lỗi khi xóa !</string>
    <string name="share_song">Chia sẻ bài hát</string>
    <string name="deleted">Đã xóa 1 bài hát </string>
    <string name="delete">Xóa bài hát ?</string>
    <string name="confirm_delete">Bạn có chắc chắn muốn xóa </string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="search">Tìm tên bài hát ...</string>
    <string name="no_song">Không có bài hát nào trong thiết bị của bạn !</string>
    <string name="no_song_lits">Không có bài hát nào trong playList !</string>
    <string name="err_play_song">Không thể phát bài hát !</string>
    <string name="feed_back_title">Feed Back</string>
    <string name="feed_back">Bạn chưa hài lòng về Ứng dụng, hãy gửi feedBack về cho chúng tôi !</string>
    <string name="need_permission">Bạn cần cấp quyền cho ứng dụng để cài làm nhạc chuông !</string>
</resources>
