<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="15dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:id="@+id/lrl_play_all"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_margin="5dp"
            android:id="@+id/img_play_all"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_play_circle_outline_yellow"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/play_all"
            android:textColor="@color/colorTextBrown" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lrl_add_to_play_list"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_margin="5dp"
            android:id="@+id/img_add_to_list"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_add_to_playlist"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorTextBrown"
            android:text="@string/addtolist"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lrl_set_as_ring_tone"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_margin="5dp"
            android:id="@+id/img_set_alarm"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_alarm"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorTextBrown"
            android:text="@string/set_to_ring"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lrl_share"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_margin="5dp"
            android:id="@+id/img_share_song"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_share"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorTextBrown"
            android:text="@string/share_song"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lrl_delete_song"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_margin="5dp"
            android:id="@+id/img_remove"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_delete"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorTextBrown"
            android:text="@string/remove"/>
    </LinearLayout>

</LinearLayout>